--- a/languages/cs_CZ.po
+++ b/languages/cs_CZ.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the Enlightenment package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2015-11-21 15:00+0100\n"
+"PO-Revision-Date: 2016-01-06 13:18+0100\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -204,7 +204,7 @@ msgstr "Vlastní CSS stylování"
 
 #: inc/theme-options.php:8
 msgid "SEO"
-msgstr "Optimalizace pro vyhledávače"
+msgstr "SEO"
 
 #: inc/theme-options.php:17 inc/theme-options.php:397
 msgid "Navbar"
@@ -393,7 +393,7 @@ msgstr "dne %s"
 
 #: functions.php:356 functions.php:370
 msgid "Filed under %s"
-msgstr "V rámci %s"
+msgstr "V rubrice %s"
 
 #: functions.php:384
 msgid "Edit This"
